# H-99

./: .gitignore  H99.cabal  README.md
src/: Problem27.hs  Problem33.hs  Problem34.hs  Problem35.hs  Problem36.hs  Problem39.hs  Problem46.hs  Problem48.hs  Problem61.hs
test/: Problem27Spec.hs  Problem32Spec.hs  Problem33Spec.hs  Problem34Spec.hs  Problem35Spec.hs  Problem36Spec.hs  Problem39Spec.hs  Problem46Spec.hs  Problem48Spec.hs
