name:                H99
version:             0.1.0.0
synopsis:            H-99: Ninety-Nine Haskell Problems
description:         Please see README.md
homepage:            http://github.com/wando-hs/H99
license:             BSD3
license-file:        LICENSE
author:              Wando-HS
maintainer:          fernando@fholiveira.com
copyright:           2016 Wando-HS
category:            Math
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 7.10.2

library
  default-language:    Haskell2010
  ghc-options:         -Wall
  exposed-modules:     Problem27
                     , Problem31
                     , Problem32
                     , Problem33
                     , Problem34
                     , Problem35
                     , Problem36
                     , Problem39
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && < 5

test-suite spec
  default-language:    Haskell2010
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , H99
                     , hspec
                     , QuickCheck

source-repository head
  type:     git
  location: https://github.com/wando-hs/H99
